# autonomous-itinerary-builder

./: .env.example  .gitignore  Makefile  README.md  build_deck.js  pyproject.toml
src/agents/: __init__.py  booker.py  constraints.py  feedback.py  geo.py  output_formatter.py  planner.py  researcher.py  route_validator.py  skills_loader.py  supervisor.py
src/agents/skills/booker/: SKILL.md
src/agents/skills/feedback/: SKILL.md
src/agents/skills/output_formatter/: SKILL.md
src/agents/skills/planner/: SKILL.md
src/agents/skills/researcher/: SKILL.md
src/agents/skills/route_validator/: SKILL.md
src/agents/skills/supervisor/: SKILL.md
src/core/: __init__.py  graph.py  models.py  state.py
src/demo/: __init__.py  feedback_intent.py  mock_pipeline.py  trace_enrichment.py
src/services/: llm.py
src/tools/: __init__.py  flights.py  maps.py  mocks.py  web_research.py
ui/: streamlit_app.py
